did some feedback issues for spacing

--- a/components/about/ourResults/style.module.scss
+++ b/components/about/ourResults/style.module.scss
@@ -2,7 +2,7 @@
 
 .ourResults {
    padding: spacing(section-primary-padding);
-   padding-bottom: 0;
+   padding-bottom: 1rem;
 
    .ourResultsTitle {
       color: color(text-primary);
@@ -27,14 +27,15 @@
    }
    .resultCardWrapper {
       display: flex;
+      justify-content: center;
+      gap: 2.5rem;
       .resultCard {
          border: 2px solid rgba(color(text-primary), 12%);
-         width: 16.875rem;
+         width: 100%;
          height: 13.87rem;
          padding: 2rem;
          background-color: color(bg-soft);
          border-radius: 1.25rem;
-         margin: 1rem 2.5rem 1rem 0;
          &:hover {
             border-color: color(heading-liner);
          }
@@ -43,6 +44,14 @@
             font-size: text(larger);
             color: color(heading-liner);
             margin-bottom: 0;
+         }
+
+         .cardText {
+            font-size: text(lg);
+            font-weight: 400;
+            line-height: 30px;
+            opacity: 0.8;
+            margin-top: 2rem;
          }
       }
    }
